# enterprise-technology-demo

./: .gitignore  README.md
llm-service-backend/: README.md  pyproject.toml
llm-service-backend/llm_service_backend/: language_model.py  main.py
web-service-backend/: README.md  pom.xml
web-service-backend/wsb-api/: pom.xml
web-service-backend/wsb-api/src/main/java/com/bitfracture/etd/: DocumentApiController.java  ExampleApiController.java
web-service-backend/wsb-application/: pom.xml
web-service-backend/wsb-application/src/main/java/com/bitfracture/etd/: Main.java
web-service-backend/wsb-application/src/main/resources/: application.yml
web-service-backend/wsb-logic/: pom.xml
web-service-backend/wsb-logic/src/main/java/com/bitfracture/etd/: DocumentBusinessLogic.java  ExampleBusinessLogic.java  LlmAdapter.java
web-service-backend/wsb-logic/src/main/java/com/bitfracture/etd/exceptions/: ModelException.java
web-service-backend/wsb-logic/src/main/java/com/bitfracture/etd/resources/: DateType.java  DocumentResource.java  Resource.java
web-service-backend/wsb-logic/src/test/java/com/bitfracture/etd/resources/: ResourceTests.java
